# simdmath

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: avx2.yml  avx512.yml  ci.yml  neon.yml
benches/: acos.rs  add.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  common.rs  cos.rs  div.rs  exp.rs  ln.rs  mul.rs  pow.rs  reduce.rs  rem.rs  sin.rs  sqrt.rs  sub.rs  tan.rs  vec_ops.rs
benches/ops/: acos.rs  add.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  common.rs  div.rs  mod.rs  mul.rs  reduce.rs  rem.rs  sub.rs
src/: lib.rs
src/arch/: mod.rs
src/arch/avx2/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  cos.rs  exp.rs  f32x8.rs  f64x4.rs  ln.rs  math.rs  mod.rs  pow.rs  sin.rs  tan.rs  vec.rs
src/arch/avx512/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  cos.rs  exp.rs  f32x16.rs  f64x8.rs  ln.rs  math.rs  mod.rs  pow.rs  sin.rs  tan.rs  vec.rs
src/arch/consts/: acos.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  cos.rs  exp.rs  ln.rs  mod.rs  sin.rs  tan.rs
src/arch/neon/: abs.rs  acos.rs  asin.rs  atan.rs  atan2.rs  cbrt.rs  cos.rs  exp.rs  f32x4.rs  f64x2.rs  ln.rs  math.rs  mod.rs  pow.rs  sin.rs  tan.rs  vec.rs
src/arch/scalar/: mod.rs
src/arch/sse/: mod.rs
src/math/: avx2.rs  avx512.rs  mod.rs  neon.rs
src/ops/: mod.rs  simd.rs  vec.rs
